typescript/checker/tests/conformance/es6/Symbols/symbolType20.ts.stderr
error: TS2427
 --> $DIR/tests/conformance/es6/Symbols/symbolType20.ts:2:11
  |
2 | interface symbol { }
  |           ^^^^^^

